# insideLLMs

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ASSESSMENT.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ANALYSIS.md  CONTRIBUTING.md  CORE_LOGIC_AUDIT.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_INDEX.md  FIXES_SUMMARY.md  HARDENING_COMPLETE.md  LICENSE  LOW_HANGING_FRUIT.md  MONSTER_LOOP.md  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  action.yml  codecov.yml  example_factuality.py  example_nlp.py  log.txt  nlp_requirements.txt  pyproject.toml  requirements-dev.txt  test_config.yaml  trace_export.json
.backups/insideLLMs_backup_20260120_040252/: caching.py  config.py  conversation.py  exceptions.py  experiment_tracking.py  fingerprinting.py  hitl.py  latency.py  leaderboard.py  optimization.py  prompt_testing.py  prompt_utils.py  quality.py  registry.py  results.py  retry.py  routing.py  runner.py  safety.py  semantic_cache.py  sensitivity.py  steering.py  streaming.py  structured.py  structured_extraction.py  synthesis.py  template_versioning.py  templates.py  tokens.py  types.py  visualization.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: behavioural-diff-example.yml  ci.yml  claude-code-review.yml  dependabot-auto-merge.yml  diff-gate.yml  pages.yml  release.yml
.goals/coverage-recovery-91/: goal.md  inspector-feedback-1.md  inspector-feedback-2.md  status.json  summary.md
.goals/trustworthy-ci-increment/: goal.md  inspector-feedback-1.md  inspector-feedback-2.md  inspector-feedback-3.md  status.json
.junie/: guidelines.md
.loop/: BACKLOG.json  LOG.md
benchmarks/: README.md  benchmark_import.py  benchmark_probes.py
chaos-cup/: .gitignore  BACKLOG.md  CHANGELOG.md  LOOP_PROMPT.md  README.md  index.html  package.json  verify.mjs
ci/: README.md  harness.yaml  harness_dataset.jsonl
compliance_intelligence/: README.md  demo.py  requirements.txt  run_server.py
compliance_intelligence/app/: __init__.py  config.py  main.py  models.py  scenarios.py
data/: factuality_config.yaml  factuality_questions.jsonl  harness_dataset.jsonl  questions.jsonl
docs/: ARTIFACT_CONTRACT.md  AUDIT_FINDINGS.md  AUDIT_FIX_PLAN.md  CRYPTO_DIGEST_CONTRACT.md  DETERMINISM.md  DOCS_STANDARDS.md  GITHUB_ACTION.md  GOLDEN_PATH.md  IMPORT_PATHS.md  MIGRATION.md  Makefile  PII_DETECTION.md  PLUGINS.md  RATE_LIMITING.md  SAFETY_MODULE_DESIGN.md  STABILITY.md  STABILITY_MATRIX.md  ci-integration.md  conf.py  index.rst  installation.rst  models.rst  probes.rst  quickstart.rst  registry.rst  runner.rst  running-feature-improvement-notes.md  schemas.rst
docs/AUDITS/: 2026-02-26-docs-audit.md
docs/api/: insideLLMs.models.rst  insideLLMs.probes.rst  insideLLMs.rst  modules.rst
docs/architecture/: API_TIERS.md  PLUGIN_SDK_RFC.md
docs/plans/: 2026-01-22-trace-config-agent-probe.md  2026-02-25-stubs-design.md  2026-02-25-stubs-implementation-plan.md  README.md  (+2 more)
examples/: README.md  demo_diff_pipeline.py  example_benchmark_suite.py  example_cli_golden_path.py  example_experiment_tracking.py  example_factuality.py  example_harness_programmatic.py  example_interactive_visualization.py  example_langchain_langgraph.py  example_models.py  example_nlp.py  example_ollama_cloud_harness_diff.py  example_openrouter_advanced.py  example_plugin.py  example_quickstart.py  example_registry.py  experiment.yaml  harness.yaml  harness_ollama_cloud_deepseek_battery.yaml  killer_feature_1_ci_gate.py  killer_feature_2_trace_guard.py  killer_feature_3_model_selection.py  ollama_cloud_benchmark.md  parallel_killer_features.md  probe_battery.jsonl  suppress_deprecation_warnings.py
insideLLMs/: __init__.py  _serialization.py  adapters.py  adversarial.py  agents.py  async_utils.py  behavior.py  benchmark.py  benchmark_datasets.py  cache.py  caching.py  caching_unified.py  calibration.py  chains.py  cli.py  comparison.py  config.py  config_types.py  constants.py  context_window.py  conversation.py  cost_tracking.py  dataset_utils.py  debugging.py  deployment.py  distributed.py  diversity.py  ensemble.py  evalbom.py  evaluation.py  exceptions.py  experiment_tracking.py  export.py  fingerprinting.py  hallucination.py  hitl.py  injection.py  introspection.py  knowledge.py  latency.py  (+44 more)
scripts/: audit_docs.py  check_import_time.py  check_secrets.py  check_type_coverage.py  check_wiki_links.py  checks.sh  github_action_build_comment.py  github_action_run.sh  ollama_cloud_harness_diff.sh
tests/: conftest.py  test_adapters.py  test_adapters_export_coverage.py  test_adversarial.py  test_agent_probe.py  test_agents.py  test_agents_branch_coverage.py  test_analysis_plan.py  test_async_runner_timeout_metadata.py  test_async_utils.py  test_async_utils_branch_coverage.py  test_attestations.py  test_audit_wave2_regressions.py  test_audit_wave3_regressions.py  test_audit_wave6_regressions.py  test_audit_wave7_regressions.py  test_basic_import.py  test_batch_generation.py  test_behavior.py  test_behavioral_diff_example.py  test_benchmark.py  test_benchmark_datasets.py  test_builtin_registry.py  test_cache.py  test_caching.py  test_caching_coverage_w7.py  test_caching_unified.py  test_caching_unified_branch_coverage.py  test_calibration.py  test_chains.py  test_chunking.py  test_claims_compiler.py  test_cli.py  test_cli_benchmark_coverage.py  test_cli_compare_coverage.py  test_cli_diff_engine.py  test_cli_diff_harness_coverage.py  test_cli_doctor_coverage.py  test_cli_doctor_missing_deps.py  test_cli_generate_optimize_coverage.py  (+221 more)
wiki/: Architecture.md  CLI.md  Configuration.md  Datasets-and-Harness.md  Determinism-and-CI.md  Development.md  Examples.md  Experiment-Tracking.md  FAQ.md  Getting-Started.md  Harness.md  Home.md  LangChain-and-LangGraph.md  Performance-and-Caching.md  Philosophy.md  Probes-and-Models.md  Providers-and-Models.md  Results-and-Reports.md  Tracing-and-Fingerprinting.md  Troubleshooting.md  _config.yml  index.md
(+415 files in other folders)
